compiler/testData/diagnostics/tests/j+k/specialBuiltIns/securityProvider.fir.kt
// FULL_JDK

import java.security.Provider

<!ABSTRACT_CLASS_MEMBER_NOT_IMPLEMENTED!>class Example<!> : Provider("A", 1.0, "B")
